patch/delete OpenAPI
